--- a/src/app/invoice/create-invoice/create-invoice.component.html
+++ b/src/app/invoice/create-invoice/create-invoice.component.html
@@ -9,38 +9,54 @@
                     <div class="col-md-4">
                         <div class="form-floating mb-3">
                             <input type="text" formControlName="customerName" class="form-control" id="cust_name"
-                                placeholder="customer name here">
-                            <label for="floatingInput">Customer Name</label>
+                                placeholder="customer name here"
+                                [class.is-invalid]="invoiceForm.get('customerName')?.invalid && submitted">
+                            <label for="cust_name">Customer Name</label>
+                            <div class="invalid-feedback">
+                                <ng-container *ngIf="invoiceForm.get('customerName')?.errors?.['required']">
+                                    <span>Customer Name is required!</span>
+                                </ng-container>
+
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-floating mb-3">
                             <input type="email" formControlName="customerEmail" class="form-control" id="cust_email"
-                                placeholder="name@example.com">
-                            <label for="floatingInput">Email address</label>
+                                placeholder="name@example.com"
+                                [class.is-invalid]="invoiceForm.get('customerEmail')?.invalid && submitted">
+                            <label for="cust_email">Email address</label>
+                            <div class="invalid-feedback">
+                                <ng-container *ngIf="invoiceForm.get('customerEmail')?.errors?.['required']">
+                                    <span>Email is required!</span>
+                                </ng-container>
+                                <ng-container *ngIf="invoiceForm.get('customerEmail')?.errors?.['email']">
+                                    <span>Email entered is invalid</span>
+                                </ng-container>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-floating mb-3">
-                            <input type="text" formControlName="invoiceNumber" class="form-control" id="cust_email"
+                            <input type="text" formControlName="invoiceNumber" class="form-control" id="inv_number"
                                 placeholder="invoice number here">
-                            <label for="floatingInput">Invoice no.</label>
+                            <label for="inv_number">Invoice no.</label>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-8">
                         <div class="form-floating mb-3">
-                            <input type="email" formControlName="customerAddress" class="form-control" id="cust_email"
+                            <input type="email" formControlName="customerAddress" class="form-control" id="cust_addr"
                                 placeholder="name@example.com">
-                            <label for="floatingInput">Customer's address</label>
+                            <label for="cust_addr">Customer's address</label>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-floating mb-3">
-                            <input type="date" formControlName="invoiceDate" class="form-control" id="cust_email"
+                            <input type="date" formControlName="invoiceDate" class="form-control" id="inv_date"
                                 placeholder="invoice number here">
-                            <label for="floatingInput">Invoice date.</label>
+                            <label for="inv_date">Invoice date.</label>
                         </div>
                     </div>
                 </div>
@@ -53,21 +69,20 @@
                                 <!-- <option selected>Select Country</option> -->
                                 <option *ngFor="let obj of countries" [value]="obj.country">{{obj.country}}
                                 </option>
-
                             </select>
-                            <label for="floatingInput">Country</label>
+                            <label>Country</label>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-floating mb-3">
-                            <select formControlName="customerState" class="form-select form-select-lg mb-3 pb-0 pt-3"
-                                aria-label=".form-select-lg">
+                            <select formControlName="customerState" id="cust_state"
+                                class="form-select form-select-lg mb-3 pb-0 pt-3" aria-label=".form-select-lg">
                                 <!-- <option selected>Select Country</option> -->
                                 <option *ngFor="let state of states" [value]="state">{{state}}
                                 </option>
 
                             </select>
-                            <label for="floatingInput">State</label>
+                            <label for="cust_state">State</label>
                         </div>
                     </div>
 
@@ -75,14 +90,14 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="cust_name" placeholder="customer city">
-                            <label for="floatingInput">City</label>
+                            <input type="text" class="form-control" id="cust_city" placeholder="customer city">
+                            <label for="cust_city">City</label>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="cust_email" placeholder="zip code here">
-                            <label for="floatingInput">Zip/Postal Code</label>
+                            <input type="email" class="form-control" id="cust_zip" placeholder="zip code here">
+                            <label for="cust_zip">Zip/Postal Code</label>
                         </div>
                     </div>
 
@@ -91,16 +106,16 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="form-floating mb-3">
-                            <input type="text" formControlName="customerPhone" class="form-control" id="cust_name"
+                            <input type="text" formControlName="customerPhone" class="form-control" id="cust_phone"
                                 placeholder="customer phone here">
-                            <label for="floatingInput">Customer phone</label>
+                            <label for="cust_phone">Customer phone</label>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="form-floating mb-3">
-                            <input type="email" formControlName="customerEmail" class="form-control" id="cust_email"
+                            <input type="email" formControlName="customerEmail" class="form-control"
                                 placeholder="name@example.com">
-                            <label for="floatingInput">Email address</label>
+                            <label>Email address</label>
                         </div>
                     </div>
                 </div>
@@ -120,33 +135,33 @@
                             <div class="form-floating mb-3">
                                 <input type="text" formControlName="name" class="form-control"
                                     placeholder="customer name here">
-                                <label for="floatingInput">Item</label>
+                                <label>Item</label>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-floating mb-3">
                                 <input type="text" class="form-control" placeholder="name@example.com">
-                                <label for="floatingInput">Decription</label>
+                                <label>Decription</label>
                             </div>
                         </div>
                         <div class="col-md-2">
                             <div class="form-floating mb-3">
-                                <input type="number" formControlName="quantity" step="1" class="form-control"
-                                    placeholder="invoice number here">
-                                <label for="floatingInput">Quantity</label>
+                                <input type="number" formControlName="quantity" (input)="calculateItemAmount(i)"
+                                    step="1" class="form-control" placeholder="invoice number here">
+                                <label>Quantity</label>
                             </div>
                         </div>
                         <div class="col-md-2">
                             <div class="form-floating mb-3">
-                                <input type="number" step=".25" formControlName="rate" class="form-control"
-                                    placeholder="invoice number here">
-                                <label for="floatingInput">Price</label>
+                                <input type="number" step=".25" (input)="calculateItemAmount(i)" formControlName="rate"
+                                    class="form-control" placeholder="invoice number here">
+                                <label>Rate</label>
                             </div>
                         </div>
                         <div class="col-md-2">
                             <div class="mb-3">
                                 <span *ngIf="i===0" class="item-amount">Amount</span>
-                                <h4 class="item-amount-value" [ngClass]="{'mt-3': i!==0}">$
+                                <h4 class="amount-value" [ngClass]="{'mt-3': i!==0}">&#8377;
                                     {{products.at(i).get('netAmount')?.value}}
                                 </h4>
                             </div>
@@ -162,13 +177,46 @@
 
                 </ng-container>
 
-                <div>
-                    <button type="button" class="btn btn-success" (click)="addProduct()">Add</button>
+                <div class="line-item_add">
+                    <button type="button" class="" (click)="addProduct()">
+                        <i class="fa fa-plus"></i>
+                        <span class="mx-2">Add item to list</span>
+                    </button>
+
                 </div>
 
             </div>
-            <button type="submit" class="btn btn-primary">Save Invoice</button>
         </div>
+        <div class="form-section">
+
+            <div class="form-body">
+                <div class="row">
+
+                    <div class="col-md-5">
+                        <div class="form-floating">
+                            <textarea class="form-control" formControlName="terms" placeholder="Leave a comment here"
+                                id="inv_terms" style="height: 100px"></textarea>
+                            <label for="inv_terms">Terms</label>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+
+                        <div class="total-wrap">
+                            <div class="subtotal-wrap">
+                                <span class="subtotal-label">Total</span>
+                                <h4 class="subtotal-value">&#8377; {{invoiceForm.get('netTotal')?.value}}</h4>
+                            </div>
+                        </div>
+
+                        <button type="submit" (click)="submitted = true" class="btn btn-primary">Save Invoice</button>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
 
     </form>
 </div>
