--- a/src/app/invoice/create-invoice/create-invoice.component.html
+++ b/src/app/invoice/create-invoice/create-invoice.component.html
@@ -111,13 +111,13 @@
                             <label for="cust_phone">Customer phone</label>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <!-- <div class="col-md-4">
                         <div class="form-floating mb-3">
                             <input type="email" formControlName="customerEmail" class="form-control"
                                 placeholder="name@example.com">
                             <label>Email address</label>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
@@ -131,20 +131,25 @@
                 <ng-container *ngFor="let product of products.controls; let i = index" [formGroupName]="i">
 
                     <div class="row">
-                        <div class="col-md-2">
+                        <div class="col-md-3">
                             <div class="form-floating mb-3">
-                                <input type="text" formControlName="name" class="form-control"
-                                    placeholder="customer name here">
-                                <label>Item</label>
+                                <p-autoComplete styleClass="autocomplete-field" formControlName="itemDetails"
+                                    [showEmptyMessage]="true" [suggestions]="filteredInventory"
+                                    (completeMethod)="filterInventory($event)" field="item"
+                                    (onSelect)="onSelectInventory($event,i)" [minLength]="2"
+                                    placeholder="Item name"></p-autoComplete>
+                                <!-- <input type="text" formControlName="name" class="form-control"
+                                    placeholder="customer name here"> -->
+                                <!-- <label>Item</label> -->
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-floating mb-3">
-                                <input type="text" class="form-control" placeholder="name@example.com">
-                                <label>Decription</label>
+                                <input type="text" formControlName="description" class="form-control" placeholder="description">
+                                <label>Description</label>
                             </div>
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-md-1">
                             <div class="form-floating mb-3">
                                 <input type="number" formControlName="quantity" (input)="calculateItemAmount(i)"
                                     step="1" class="form-control" placeholder="invoice number here">
@@ -152,11 +157,15 @@
                             </div>
                         </div>
                         <div class="col-md-2">
-                            <div class="form-floating mb-3">
-                                <input type="number" step=".25" (input)="calculateItemAmount(i)" formControlName="rate"
-                                    class="form-control" placeholder="invoice number here">
-                                <label>Rate</label>
-                            </div>
+
+                            <fieldset [disabled]="true">
+                                <div class="form-floating mb-3">
+                                    <input type="number" step=".25" (input)="calculateItemAmount(i)"
+                                        formControlName="rate" class="form-control" placeholder="invoice number here">
+                                    <label>Rate</label>
+                                </div>
+                            </fieldset>
+
                         </div>
                         <div class="col-md-2">
                             <div class="mb-3">
@@ -166,7 +175,7 @@
                                 </h4>
                             </div>
                         </div>
-                        <div class="col-md-1 text-center item-amount-col">
+                        <div class="col-md-1  item-amount-col">
                             <div class="form-floating">
                                 <button *ngIf="i!==0" class="btn btn-danger btn-circle" (click)="removeProduct(i)"><i
                                         class="fa fa-xmark "></i></button>
