--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~primeicons/primeicons.css';
 
 .main-section {
-    margin: 20px 10%;
+    margin: 20px 5%;
 
 }
 
